--- a/public/index.css
+++ b/public/index.css
@@ -39,3 +39,12 @@
 .auth {
   padding-top: 10px;
 }
+
+.alert {
+  padding: 10px 5px;
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 10px;
+  background: rgba(255, 0, 0, .3);
+  color: red;
+}
