--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,6 +7,9 @@
       </ul>
     </div>
     <div id="login" class="col s6 offset-s3">
+      {{#if loginError}}
+        <p class="alert">{{loginError}}</p>
+      {{/if}}
       <h3>Login in the shop</h3>
       <form action="/auth/login" method="POST">
         <div class="input-field">
@@ -21,11 +24,16 @@
           <span class="helper-text" data-error="Write password"></span>
         </div>
 
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+
         <button class="btn btn-primary" type="submit">Login</button>
       </form>
 
     </div>
     <div id="register" class="col s6 offset-s3">
+      {{#if registerError}}
+        <p class="alert">{{registerError}}</p>
+      {{/if}}
       <h3>Create account</h3>
       <form action="/auth/register" method="POST">
         <div class="input-field">
@@ -51,6 +59,8 @@
           <label for="name">Your name</label>
           <span class="helper-text" data-error="Write name"></span>
         </div>
+
+        <input type="hidden" name="_csrf" value="{{csrf}}">
 
         <button class="btn btn-primary" type="submit">Registration</button>
       </form>
